--- a/index.css
+++ b/index.css
@@ -82,7 +82,9 @@ nav a{
 
 figure img{
     height: 200px;
-    width: 200px;    
+    width: 200px;  
+    border: 5px solid #3882F6;  
+    border-radius: 15px;
 }
 #topics{
    text-align: center;
@@ -137,4 +139,7 @@ footer{
     font-size: 18px;
     color: #E5E7EB;
     text-align: center;
+}
+#btn1, #btn2: :active{
+    background-color: red;
 }
